--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            canvas {
+                border: 1px solid #000000;
+            }
+        </style>
     </head>
 
     <body>
-        <h1 id="title">Hello world</h1>
+        <canvas id="canvas" , width="300" , height="300"></canvas>
         <script src="../build/index.js"></script>
     </body>
 </html>
