--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
         <title>Document</title>
         <style>
             canvas {
-                border: 1px solid #000000;
+                border: 2px solid #FF0000;
             }
+            html,
+            body {
+                margin: 0;
+                height: 100%;
+                overflow: hidden;
+            } /* https://stackoverflow.com/questions/28411499/disable-scrolling-on-body */
         </style>
     </head>
 
