Border inside canvas, without scroll

--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <style>
-            canvas {
-                border: 2px solid #FF0000;
-            }
-            html,
-            body {
-                margin: 0;
-                height: 100%;
-                overflow: hidden;
-            } /* https://stackoverflow.com/questions/28411499/disable-scrolling-on-body */
-        </style>
+        <link rel="stylesheet" href="styles.css" />
     </head>
 
     <body>
-        <canvas id="canvas" , width="300" , height="300"></canvas>
+        <canvas id="canvas"></canvas>
         <script src="../build/index.js"></script>
     </body>
 </html>
