--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!--        <meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
         <title>Document</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
 
     <body>
         <canvas id="canvas"></canvas>
-        <script src="../build/index.js"></script>
+        <script src="../build/bundle.js"></script>
     </body>
 </html>
