--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
-        <canvas id="canvas"></canvas>
+        <div style="position: relative">
+            <canvas id="ts-canvas" class="canvas"></canvas>
+            <div id="ts-debug-window" class="debug-window">DEBUG</div>
+        </div>
     </body>
 </html>
