--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <body>
         <div style="position: relative">
             <canvas id="ts-canvas" class="canvas"></canvas>
+            <canvas id="off-canvas" class="canvas"></canvas>
             <div id="ts-debug-window" class="debug-window">DEBUG</div>
         </div>
     </body>
